@@ -7,6 +7,7 @@ ndim-utils 0.6.x
   * fixed escaping and formatting for all man pages
   * watch-xsel: Add --append=FILE argument.
   * watch-xsel: Add --max-lines=NO argument.
+  * watch-xsel: Add --skip-list=FILE argument.
   * watch-xsel: Add --verbose argument.
   * watch-xsel: Add --xsel-timeout=MS argument.
 
